@@ -15,6 +15,13 @@ Version 2.1-14 (opened March 9, 2012)
 	to anosim, mrpp, simper (where this worst) and adonis (where this
 	was already analysed by Marti Anderson when introducing the
 	method).
+
+	* msoplot: expose 'ylim' as an argument. Previously, 'ylim' was
+	set internally and user could not change it setting, although
+	y-axis maximum was sometimes so low that standard errors were
+	outside the plot, and legend covered lines. The default setting of
+	'ylim' was improved, and the function follows R idiom more
+	closely. Reported in a private email to J.O. by Ricardo Pita.
 	
 Version 2.1-13 (closed March 9, 2012)
 
